--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   http: any
   uuid: ^3.0.6
   intl: ^0.17.0
+  geolocator: ^9.0.2
   share_plus: ^6.3.4
   path_provider: ^2.0.14
   cupertino_icons: ^1.0.2
